--- a/praktikum05/login.html
+++ b/praktikum05/login.html
@@ -10,9 +10,10 @@
     <br>
     Password  <input type="password" name="password" placeholder="password">
     <br>
-    <input class="login" type="submit" name="submit" value="login">
+    <a href="berhasil.html" id="berhasil">
+      <input class="login" type="submit" name="submit" value="login">
+    </a>
   </form>
 </body>
-<script type="text/javascript" src="js/login.js">
-</script>
+<script type="text/javascript" src="js/login.js"></script>
 </html>
