0110219072_Rafliedka_TI01_Praktikum05

--- a/praktikum05/gambar.html
+++ b/praktikum05/gambar.html
@@ -5,11 +5,15 @@
     </head>
     <body>
         <form>
-            <select name="gambar" id="gambar">
+            <select name="" id="gambar" onchange="main()">
                 <option value="kucing">kucing</option>
                 <option value="kambing">kambing</option>
-                <option value="dragon">deragon</option>
+                <option value="deragon">deragon</option>
+                <option value="tapir">tapir</option>
+                <option value="capybara">capybara</option>
+                <option value="tikusbulan">tikus bulan</option>
             </select>
         </form>
+        <img id="image" width="500" src="https://tkplusaliman.files.wordpress.com/2012/05/mewarnai-kura-kura-2.jpg" alt="">
     </body>
 </html>
