0110219072_Rafliedka_TI01_Praktikum05

--- a/praktikum05/tugas/1-login/login.html
+++ b/praktikum05/tugas/1-login/login.html
@@ -3,7 +3,7 @@
 <head>
   <title>Login</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <fieldset>
@@ -19,5 +19,5 @@
     </form>
   </fieldset>
 </body>
-<script type="text/javascript" src="js/login.js"></script>
+<script type="text/javascript" src="login.js"></script>
 </html>
