--- a/praktikum05/tugas/4-gambar/gambar.html
+++ b/praktikum05/tugas/4-gambar/gambar.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>merubah gambar</title>
+        <script src="gambar.js"></script>
     </head>
     <body>
         <form>
@@ -14,6 +15,6 @@
                 <option value="tikusbulan">tikus bulan</option>
             </select>
         </form>
-        <img id="image" width="500" src="https://tkplusaliman.files.wordpress.com/2012/05/mewarnai-kura-kura-2.jpg" alt="">
+        <img id="image" width="500" src="gambar/kucing.jfif" alt="">
     </body>
 </html>
