--- a/praktikum05/tugas/2-kurs/kurs.html
+++ b/praktikum05/tugas/2-kurs/kurs.html
@@ -2,7 +2,7 @@
     <head>
         <title>kurs</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <fieldset>
