--- a/praktikum05/tugas/3-chat/chat.html
+++ b/praktikum05/tugas/3-chat/chat.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Chat Box</title>
-    <link rel="stylesheet" href="css/style01.css">
+    <link rel="stylesheet" href="style01.css">
   </head>
   <body>
     <h1>Chat Box</h1>
@@ -14,6 +14,6 @@
         <input type="submit" value="Send" id="add" />
       </div>
     </div>
-    <script src="js/chat.js"></script>
+    <script src="chat.js"></script>
   </body>
 </html>
